Update modules_resources.yml for Azure Pipelines

--- a/modules_resources.yml
+++ b/modules_resources.yml
@@ -24,6 +24,9 @@ steps:
     backendAzureRmStorageAccountName: 'storage67965'
     backendAzureRmContainerName: 'mycontainer45687'
     backendAzureRmKey: 'prod.terraform.tfstate'
+- task: CmdLine@2
+  inputs:
+    script: 'sudo chmod 777 Main_Modules'
 - task: TerraformTaskV4@4
   inputs:
     provider: 'azurerm'
