Update modules_resources.yml for Azure Pipelines

--- a/modules_resources.yml
+++ b/modules_resources.yml
@@ -21,6 +21,7 @@ steps:
   inputs:
     provider: 'azurerm'
     command: 'init'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/Main_Modules'
     backendServiceArm: 'devopsnew'
     backendAzureRmResourceGroupName: 'testingRG'
     backendAzureRmStorageAccountName: 'storage67965'
