Update modules_resources.yml for Azure Pipelines

--- a/modules_resources.yml
+++ b/modules_resources.yml
@@ -32,6 +32,7 @@ steps:
   inputs:
     provider: 'azurerm'
     command: 'plan'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/Main_Modules'
     environmentServiceNameAzureRM: 'devopsnew'
 
 - task: TerraformTaskV4@4
